--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [], default-features = false }
 
 [dependencies]
-tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all"] }
+tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all", "system-tray"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 notify = "6.1"
@@ -21,6 +21,7 @@ chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0"
 regex = "1.10"
+image = "0.24"
 
 [features]
 default = ["custom-protocol"]
