--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,42 +19,73 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install dependencies (Ubuntu only)
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev
-
-      - name: Install frontend dependencies
-        run: npm install
-        if: hashFiles('package.json') != ''
-
-      - name: Build Tauri app
-        uses: tauri-apps/tauri-action@v0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
         with:
-          tagName: v__VERSION__
-          releaseName: 'FloatSort v__VERSION__'
-          releaseBody: '文件自动整理工具 FloatSort 新版本发布'
-          releaseDraft: true
-          prerelease: false
+          workspaces: './src-tauri -> target'
 
-      - name: Upload artifacts
+      - name: Install Tauri CLI
+        run: cargo install tauri-cli --version "^1.0" --locked
+
+      - name: Build Tauri app (Windows)
+        if: matrix.platform == 'windows-latest'
+        run: |
+          cd src-tauri
+          cargo tauri build --bundles msi,nsis
+
+      - name: Build Tauri app (macOS)
+        if: matrix.platform == 'macos-latest'
+        run: |
+          cd src-tauri
+          cargo tauri build --bundles dmg,app
+
+      - name: Upload Windows artifacts
+        if: matrix.platform == 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
-          name: floatsort-${{ matrix.platform }}
+          name: floatsort-windows
           path: |
-            src-tauri/target/release/bundle/**/*.msi
-            src-tauri/target/release/bundle/**/*.exe
-            src-tauri/target/release/bundle/**/*.dmg
-            src-tauri/target/release/bundle/**/*.app
+            target/release/bundle/msi/*.msi
+            target/release/bundle/nsis/*.exe
+
+      - name: Upload macOS artifacts
+        if: matrix.platform == 'macos-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: floatsort-macos
+          path: |
+            target/release/bundle/dmg/*.dmg
+            target/release/bundle/macos/*.app
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/**/*
+          draft: true
+          generate_release_notes: true
+          body: |
+            ## FloatSort ${{ github.ref_name }}
+            
+            智能文件自动整理工具
+            
+            ### 下载说明
+            - **Windows 用户**: 下载 `.exe` 或 `.msi` 文件
+            - **macOS 用户**: 下载 `.dmg` 文件
+            
+            ### 更新内容
+            请查看下方自动生成的更新日志
 
