--- a/.editorconfig
+++ b/.editorconfig
@@ -1,63 +1,20 @@
-# EditorConfig 配置文件
-# https://editorconfig.org
+# EditorConfig is awesome: https://EditorConfig.org
 
 root = true
 
-# 所有文件
 [*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-# Rust 文件
-[*.rs]
+[*.{rs,toml}]
 indent_style = space
 indent_size = 4
 
-# TOML 文件
-[*.toml]
+[*.{js,html,css,json,yml,yaml}]
 indent_style = space
 indent_size = 2
 
-# JSON 文件
-[*.json]
-indent_style = space
-indent_size = 2
-
-# HTML 文件
-[*.html]
-indent_style = space
-indent_size = 4
-
-# CSS 文件
-[*.css]
-indent_style = space
-indent_size = 4
-
-# JavaScript 文件
-[*.js]
-indent_style = space
-indent_size = 4
-
-# Markdown 文件
 [*.md]
-indent_style = space
-indent_size = 2
 trim_trailing_whitespace = false
-
-# YAML 文件
-[*.{yml,yaml}]
-indent_style = space
-indent_size = 2
-
-# Shell 脚本
-[*.sh]
-indent_style = space
-indent_size = 4
-
-# PowerShell 脚本
-[*.ps1]
-indent_style = space
-indent_size = 4
-
