--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: artifacts/**/*
-          draft: true
+          draft: false
           generate_release_notes: true
           body: |
             ## FloatSort ${{ github.ref_name }}
