--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = "1.0"
 regex = "1.10"
 image = "0.24"
 trash = "3.0"
+once_cell = "1.19"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
